--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
     crossorigin="anonymous" />
 
-  <title>E-Commerce</title>
+  <title>Merchase</title>
 </head>
 
 <body id="top" style=" background-color: rgb(206 180 208);">
